pkg/lang/syntax/testdata/ub/validate/invalid/factory/configuration-reference-alias.ub
factory: {
  configurations: {
    formal: greet {
      prefix: configuration.greet.formal.prefix
    }
  }
}
